<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/royal_blue">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@color/royal_blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/einstellungen"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="@color/lime_yellow" />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="66dp"
        android:layout_height="61dp"
        android:layout_marginStart="330dp"
        android:layout_marginTop="2dp"
        app:srcCompat="@drawable/ic_settings"
        tools:ignore="VectorDrawableCompat,ImageContrastCheck" />

    <FrameLayout
        android:id="@+id/imageView"
        android:layout_width="330dp"
        android:layout_height="220dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="43dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/rectanglebackground">

        <SeekBar
            android:id="@+id/SeekBarUmkreis"
            android:layout_width="317dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="50dp"
            android:max="100"
            android:progress="0" />

        <TextView
            android:id="@+id/TextViewUmkreis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="96dp"
            android:layout_marginTop="13dp"
            android:text="@string/umkreis_0_km"
            android:textColor="@color/lime_yellow"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/ButtonUmkreis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="102dp"
            android:layout_marginTop="155dp"
            android:text="@string/bernehmen" />

        <EditText
            android:id="@+id/Breitengradtext"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="70dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/breitengrad"
            android:textColor="@color/lime_yellow"
            android:textColorHint="@color/gray"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/Laengengradtext"
            android:layout_width="220dp"
            android:layout_height="40dp"
            android:layout_gravity="center|top"
            android:layout_marginTop="110dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/laengengrad"
            android:textColor="@color/lime_yellow"
            android:textColorHint="@color/gray"
            tools:ignore="TouchTargetSizeCheck" />

    </FrameLayout>

    <Button
        android:id="@+id/logout"
        android:layout_width="115dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:background="@drawable/logoutbutton"
        android:text="@string/logout"
        android:textColor="@color/lime_yellow" />

    <FrameLayout
        android:id="@+id/imageViewProfile"
        android:layout_width="250dp"
        android:layout_height="210dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:background="@drawable/rectanglebackground">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="top|center"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/ic_abstract_user_flat_1"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/username_name"
            android:textColor="@color/lime_yellow"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/Rolename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="75dp"
            android:text="@string/role_role"
            android:textColor="@color/lime_yellow"
            android:textSize="20sp"
            android:textStyle="bold" />

    </FrameLayout>


</RelativeLayout>